Improved studies section

--- a/studies/data/Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals.json
+++ b/studies/data/Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals.json
@@ -1,5 +1,5 @@
 {
-  "title": "Sex reassignment: outcomes and predictors of treatment for adolescent and adult transsexuals",
+  "title": "Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals",
   "doi": "10.1017/S0033291704002776",
   "summary": null,
   "description": null,
