--- a/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
+++ b/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
@@ -4,6 +4,10 @@
   "summary": null,
   "description": null,
   "tags": [
-    "PB"
+    "PB",
+    "GAHT",
+    "GAS",
+    "Depression",
+    "Anxiety"
   ]
 }
