--- a/studies/data/Final height, gonadal function and bone mineral density of adolescent males with central precocious puberty after therapy with gonadotropin-releasing hormone analogues.json
+++ b/studies/data/Final height, gonadal function and bone mineral density of adolescent males with central precocious puberty after therapy with gonadotropin-releasing hormone analogues.json
@@ -1,5 +1,5 @@
 {
-  "title": "Final height, gonadal function and bone mineral density of adolescent males with central precocious puberty after\ntherapy with gonadotropin-releasing hormone analogues",
+  "title": "Final height, gonadal function and bone mineral density of adolescent males with central precocious puberty after therapy with gonadotropin-releasing hormone analogues",
   "doi": "10.1007/s004310051289",
   "summary": null,
   "description": null,
