Improved studies section

--- a/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
+++ b/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
@@ -4,7 +4,7 @@
   "summary": null,
   "description": null,
   "tags": [
-    "GAHT",
-    "GAS"
+    "Gender-affirming hormone therapy",
+    "Gender-affirming surgery"
   ]
 }
