--- a/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
+++ b/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
@@ -4,9 +4,9 @@
   "summary": null,
   "description": null,
   "tags": [
-    "PB",
-    "GAHT",
-    "GAS",
+    "Puberty blockers",
+    "Gender-affirming hormone therapy",
+    "Gender-affirming surgery",
     "Depression",
     "Anxiety"
   ]
