Improved studies section

--- a/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
+++ b/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
@@ -1,5 +1,5 @@
 {
-  "title": "Hormonal therapy and sex reassignment: a systematic review and meta-analysis of quality of life and psychosocial outcomes",
+  "title": "Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes",
   "doi": "10.1111/j.1365-2265.2009.03625.x",
   "summary": null,
   "description": null,
