--- a/studies/data/Current approach to the clinical care of adolescents with gender dysphoria.json
+++ b/studies/data/Current approach to the clinical care of adolescents with gender dysphoria.json
@@ -4,6 +4,9 @@
   "summary": null,
   "description": null,
   "tags": [
-    null
+    "Gender dysphoria",
+    "Youth",
+    "Puberty blockers",
+    "Gender-affirming hormone therapy"
   ]
 }
