--- a/studies/data/Development of the Gender Minority Stress and Resilience Measure.json
+++ b/studies/data/Development of the Gender Minority Stress and Resilience Measure.json
@@ -1,7 +1,7 @@
 {
   "title": "Development of the Gender Minority Stress and Resilience Measure",
   "doi": "10.1037/sgd0000081",
-  "summary": null,
+  "summary": "About the development of the GMSR measurement tool",
   "description": null,
   "tags": [
     "Minority stress"
