--- a/studies/data/Evaluation of Anxiety and Depression in a Community Sample of Transgender Youth.json
+++ b/studies/data/Evaluation of Anxiety and Depression in a Community Sample of Transgender Youth.json
@@ -1,7 +1,7 @@
 {
   "title": "Evaluation of Anxiety and Depression in a Community Sample of Transgender Youth",
   "doi": "10.1001/jamanetworkopen.2021.4739",
-  "summary": null,
+  "summary": "Social transition youth ≈ anxiety depression",
   "description": "These results demonstrate that many socially transitioned transgender youth experience levels of anxiety and depression in the normative range and equal to or only slightly higher than siblings and cisgender peers. Whether their generally strong mental health is because of their early social transition, the high levels of support they receive, or other factors is as yet unknown",
   "tags": [
     "Social transition",
