--- a/studies/data/Factors Associated with Satisfaction or Regret Following Male-to-Female Sex Reassignment Surgery.json
+++ b/studies/data/Factors Associated with Satisfaction or Regret Following Male-to-Female Sex Reassignment Surgery.json
@@ -1,7 +1,7 @@
 {
   "title": "Factors Associated with Satisfaction or Regret Following Male-to-Female Sex Reassignment Surgery",
   "doi": "10.1023/A:1024086814364",
-  "summary": null,
+  "summary": "GAS = ↑ quality of life ↓ regret",
   "description": null,
   "tags": [
     "Regret",
