--- a/studies/data/Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals.json
+++ b/studies/data/Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals.json
@@ -1,7 +1,7 @@
 {
   "title": "Sex reassignment outcomes and predictors of treatment for adolescent and adult transsexuals",
   "doi": "10.1017/S0033291704002776",
-  "summary": null,
+  "summary": "GAS = ↑ psychosocial functioning ↑ satisfaction",
   "description": null,
   "tags": [
     "Gender-affirming surgery"
