--- a/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
+++ b/studies/data/Young adult psychological outcome after puberty suppression and gender reassignment.json
@@ -1,7 +1,7 @@
 {
   "title": "Young adult psychological outcome after puberty suppression and gender reassignment",
   "doi": "10.1542/peds.2013-2958",
-  "summary": null,
+  "summary": "PB / GAHT / GAS = ↑ psychological functioning",
   "description": null,
   "tags": [
     "Puberty blockers",
