--- a/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
+++ b/studies/data/Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes.json
@@ -1,10 +1,13 @@
 {
   "title": "Hormonal therapy and sex reassignment a systematic review and meta-analysis of quality of life and psychosocial outcomes",
   "doi": "10.1111/j.1365-2265.2009.03625.x",
-  "summary": null,
+  "summary": "GAHT & GAS = ↑ quality of life ↑ psychosocial well-being ↓ anxiety & depression",
   "description": null,
   "tags": [
     "Gender-affirming hormone therapy",
-    "Gender-affirming surgery"
+    "Gender-affirming surgery",
+    "Mental health",
+    "Anxiety",
+    "Depression"
   ]
 }
