--- a/studies/data/Long-term follow-up psychosocial outcome of Belgian transsexuals after sex reassignment surgery.json
+++ b/studies/data/Long-term follow-up psychosocial outcome of Belgian transsexuals after sex reassignment surgery.json
@@ -1,9 +1,10 @@
 {
   "title": "Long-term follow-up psychosocial outcome of Belgian transsexuals after sex reassignment surgery",
   "doi": "10.1016/j.sexol.2006.04.002",
-  "summary": null,
+  "summary": "GAS = ↑ psychosocial functioning",
   "description": null,
   "tags": [
-    "Gender-affirming surgery"
+    "Gender-affirming surgery",
+    "Mental health"
   ]
 }
