--- a/studies/data/Sex reassignment surgery A study of 141 dutch transsexuals.json
+++ b/studies/data/Sex reassignment surgery A study of 141 dutch transsexuals.json
@@ -1,7 +1,7 @@
 {
   "title": "Sex reassignment surgery A study of 141 dutch transsexuals",
   "doi": "10.1007/BF01542484",
-  "summary": null,
+  "summary": "GAS = ↑ satisfaction ↑ quality-of-life",
   "description": "It is concluded that there is no reason to doubt the therapeutic effect of sex reassignment surgery.",
   "tags": [
     "Gender-affirming surgery"
